# orchestra

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/agents/: mcp-adapter.md  observability.md  replay-guardian.md  schema-keeper.md  temporal-activity.md  temporal-workflow.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: capabilities.yaml  profiles.yaml  review-schema.yaml
deploy/: Dockerfile.demo-agent  Dockerfile.worker  docker-compose.demo.yml  docker-compose.override.yml  docker-compose.yml  otel-collector.yaml
deploy/prometheus/: alerts.yaml  prometheus.yml
docs/: architecture.md  design.md  mcp-contract.md  requirements.md  usage.md
examples/: flappybird.pipeline.yaml  game-dev-review-gated.pipeline.yaml  game-dev.pipeline.yaml  minimal-demo.pipeline.yaml  minimal.pipeline.yaml  parameterized.pipeline.yaml  review-driven.pipeline.yaml  review-gate-simple.pipeline.yaml  studio-sprint.pipeline.yaml
examples/abyss-chess/: agents.yaml  asset.pipeline.yaml  bug.pipeline.yaml  sprint.pipeline.yaml
examples/indie-game/: agents.yaml  asset.pipeline.yaml  management.pipeline.yaml  sprint-master.pipeline.yaml
examples/values/: prod.values.yaml  staging.values.yaml
runbook/: 01-agent-heartbeat-flap.md  02-replay-failure.md  03-task-queue-backlog.md  04-approval-pending.md  05-state-too-large.md  06-llm-quota-exhausted.md  07-misfired-pipeline.md  08-bootstrap-infrastructure.md  README.md
schema/: agent-profile.schema.json  pipeline-run.schema.json  pipeline.schema.json
scripts/: demo_agent.py  mcp_rest_bridge.py  record_fixtures.py
src/orchestra/: __init__.py
tests/: README.md  conftest.py
tests/chaos/: test_resilience.py
tests/load/: test_throughput.py
(+102 files in other folders)
