[project]
name = "orchestra"
version = "0.1.0"
description = "AI Agent 流水线编排引擎（Temporal + 自研 DSL + MCP）"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Agent Orchestra Contributors"}]
dependencies = [
    "temporalio>=1.7.0",
    "pyyaml>=6.0",
    "jsonschema>=4.21.0",
    "jsonpath-ng>=1.6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation>=0.45b0",
    "structlog>=24.1.0",
    "pydantic>=2.6.0",
    "cel-python>=0.1.5",
    "redis>=5.0.0",
    "aiosqlite>=0.20.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML",
    "types-jsonschema",
]

[project.scripts]
orchestra = "orchestra.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]
exclude = ["tests/replay/fixtures"]

[[tool.mypy.overrides]]
module = ["temporalio.*", "jsonpath_ng.*", "celpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: pure unit tests (no IO)",
    "integration: requires Temporal dev server",
    "replay: replay compatibility tests",
    "chaos: chaos / failure injection",
    "load: throughput / latency baselines",
]
